changed background image

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="jumbotron">
             <div class="container">
-                <h1>Crystal Collector</h1>
+                <h1 style="color: whitesmoke">Crystal Collector</h1>
             </div>
         </div>
 
